# prompt-optimizer

./: .env.example  .gitignore  README.md  clean_blanks.py  fix_encoding.py  fix_encoding2.py  fix_feishu.py  pyproject.toml  requirements.txt  run.bat  test_report_sync_logic.py  trae.md
app/: main.py
app/controllers/: feishu_controller.py
app/core/: config.py  database.py  deps.py  feishu.py  llm.py  logger.py  prompts.py  redis.py
app/handlers/: feishu_handler.py
app/models/: prompt_log.py
app/repositories/: prompt_repository.py
app/schemas/: prompt.py
app/services/: feishu_service.py  prompt_service.py  report_analysis_service.py
