[project]
name = "prompt-optimizer-bot"
version = "0.1.0"
description = "Feishu Bot for Prompt Optimization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-dotenv>=1.0.0",
    "lark-oapi>=1.2.0",
    "httpx>=0.26.0",
    "pydantic>=2.6.0",
    "openai>=1.12.0",
]

[tool.setuptools]
packages = ["app"]
